<resources>
    <string name="app_name">Executives</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tap_to_retry">Reload</string>
    <string name="title_reports">Reports</string>
    <string name="title_letters">Morsalat</string>
    <string name="title_messages">Messages</string>
    <string name="settings">Settings</string>

    <string name="login_header_ar">هيئة الزكاة والضريبة والجمارك</string>
    <string name="login_header_en">Zakat,Tax,Customs Authority</string>

    <string name="login_title">Welcome back</string>
    <string name="login_title_first_time">Welcome to Executives App</string>

    <string name="login_with_another_account">Login with another account</string>
    <string name="login_forget_pass">Forget Password?</string>

    <string name="login_pass_hint">Password</string>
    <string name="login_user_hint">Username</string>
    <string name="login_btn_hint">login</string>
    <string name="login_or_hint">OR</string>

    <string name="login_biometric_hint">Use Your Finger To Login</string>
    <string name="login_inputs_error_message">Please enter a valid username or password</string>

    <string name="login_user_name_input_error_message">Please enter your user name</string>
    <string name="login_password_input_error_message">Please enter your password</string>



    <string name="login_otp_header">Enter OTP</string>
    <string name="login_otp_description">OTP code has been sent to you via SMS for the mobile number that ends with %s</string>
    <string name="otp_sent_to_phone">OTP code has been sent to you via SMS for the mobile number </string>

    <string name="login_otp_timer">02 : 20 secs</string>
    <string name="login_otp_not_received">Didn’t Recieve the Code?</string>
    <string name="login_otp_resend">Resend Code</string>
    <string name="login_otp_verfiy">Verify</string>
    <string name="login_otp_error_message">Invalid otp</string>


    <string name="check_your_network_connection_and_try_again">StringsRepository</string>
    <string name="timeout_error_message">timeout_error_message</string>
    <string name="biometrics_label">Biometrics</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="language">Language</string>
    <string name="logout">Log out</string>
    <string name="logout_dialog_title">Log out?</string>
    <string name="logout_dialog_content">Are you sure you want to log out ?</string>


    <string name="login_button">Login</string>
    <string name="unknown_error_message">unknown error!</string>


    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
</resources>