<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zaka.features.main.reports.ReportsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.zaka.features.main.letters.LettersFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_letters" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.zaka.features.main.chatrooms.ChatRoomsFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_chat_rooms" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.zaka.features.settings.SettingsFragment"
        android:label="@string/settings" />
</navigation>