<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="159dp"
    android:background="@color/white"
    android:layout_gravity="center"
    android:layout_marginStart="36dp"
    android:layout_marginEnd="36dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_title"
        android:textSize="22sp"
        android:text="@string/logout_dialog_title"
        style="@style/TextAppearanceBold.greyish_brown"
        android:layout_marginTop="28dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_content"
        android:textSize="17sp"
        android:text="@string/logout_dialog_content"
        style="@style/TextAppearanceRegular.greyish_brown"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title"
        app:layout_constraintStart_toStartOf="@+id/dialog_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_btn_yes"
        android:textSize="17sp"
        android:text="@string/common_yes"
        style="@style/TextAppearanceMedium.greenBlue"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="31.5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_btn_no"
        android:textSize="17sp"
        android:text="@string/common_no"
        style="@style/TextAppearanceMedium.greenBlue"
        android:layout_marginEnd="35.5dp"
        app:layout_constraintTop_toTopOf="@+id/dialog_btn_yes"
        app:layout_constraintEnd_toStartOf="@+id/dialog_btn_yes"/>

</androidx.constraintlayout.widget.ConstraintLayout>