<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/navy_blue"
    tools:context=".features.main.reports.ReportsFragment">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    >

    <ImageView
        android:id="@+id/zatca_logo"
        android:layout_width="50dp"
        android:layout_height="61.6dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_zatca_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_zatca_name_en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14.7dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        style="@style/labelMeduim"
        android:text="@string/login_header_ar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zatca_logo" />
    <TextView
        android:id="@+id/text_zatca_name_ar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        style="@style/label"

        android:text="@string/login_header_en"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_zatca_name_en" />


    <TextView
        android:id="@+id/login_welcom_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="28dp"
        android:textAlignment="textStart"
        style="@style/Header"
        android:lineSpacingExtra="13sp"
        android:text="@string/login_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_zatca_name_ar" />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/avatar"
        app:civ_border_width="3dp"
        android:layout_marginTop="23dp"
        app:civ_border_color="#43afba"
        app:layout_constraintStart_toStartOf="@+id/login_welcom_title"
        app:layout_constraintTop_toBottomOf="@+id/login_welcom_title"/>

    <TextView
        android:id="@+id/login_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:text="mohamed "
        android:paddingTop="8dp"
        style="@style/TextAppearanceBold.White"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image" />

    <TextView
        android:id="@+id/login_user_postion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="14sp"
        tools:text="ceo "
        style="@style/TextAppearanceMedium.White"

        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/login_user_name" />

    <TextView
        android:id="@+id/login_another_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="14sp"
        style="@style/label"
        android:visibility="gone"
        android:textColor="@color/steel_blue"
        android:text="@string/login_with_another_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_user_postion" />
<androidx.constraintlayout.widget.Barrier
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:barrierDirection="bottom"
    android:id="@+id/barrier"
    app:constraint_referenced_ids="login_user_name,login_user_postion,profile_image,tilUserName"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUserName"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="35dp"
        style="@style/MaterialTextField"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:startIconDrawable="@drawable/ic_main_user"
        app:startIconTint="@color/text_input_icon_color_selector"
        app:hintTextColor="@color/steel"
        android:visibility="gone"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_user_postion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_user_hint"
            android:background="@drawable/background_input_login"
            android:inputType="text"
            android:maxLines="1"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassWord"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        style="@style/MaterialTextField"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/text_input_icon_color_selector"
        app:startIconDrawable="@drawable/ic_icon_outlined_action_lock_locked"
        app:startIconTint="@color/text_input_icon_color_selector"
        app:hintTextColor="@color/steel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_pass_hint"
            android:inputType="text"
            android:maxLines="1"

            />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        style="@style/MaterialAppButton"
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/login_button"
        app:layout_constraintTop_toBottomOf="@+id/tilPassWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:id="@+id/loutFingerprint"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearanceMedium.White"
            android:textSize="13sp"
            android:lineSpacingExtra="7sp"
            android:layout_marginBottom="20dp"
            android:text="@string/login_or_hint"/>
        <ImageView
            android:id="@+id/btnLoginWithFinger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_finger"
            />
        <TextView
            style="@style/TextAppearanceMedium.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="7sp"
            android:text="@string/login_biometric_hint"/>
    </LinearLayout>
    <TextView
        android:id="@+id/login_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="gone"
        android:textColor="@color/light_grey"
        android:text="@string/login_forget_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="84dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>