<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy_blue"
    tools:context=".features.login.LoginActivity">

    <TextView
        android:id="@+id/text_otp_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:textAlignment="textStart"
        style="@style/Header"

        android:text="@string/login_otp_header"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_otp_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:textAlignment="textStart"
        android:textSize="14sp"
        style="@style/TextAppearanceRegular.light_grey"
        android:text="@string/login_otp_description"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/text_otp_header" />

    <include
        android:id="@+id/includedOtp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:focusedByDefault="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_otp_desc"
        android:layout_marginTop="42dp"
        layout="@layout/otp_layout"/>

    <TextView
        android:id="@+id/text_otp_timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="@color/gainsboro"
        android:text="@string/login_otp_timer"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/includedOtp" />

    <TextView
        android:id="@+id/text_otp_not_received"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="14sp"
        style="@style/label"
        android:visibility="gone"
        android:text="@string/login_otp_not_received"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/text_otp_timer" />

    <TextView
        android:id="@+id/text_resend_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="gone"
        android:textColor="@color/steel_blue"
        android:text="@string/login_otp_resend"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/text_otp_not_received" />


    <androidx.appcompat.widget.AppCompatButton
        style="@style/MaterialAppButton"
        android:id="@+id/btn_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/login_otp_verfiy"
        app:layout_constraintTop_toBottomOf="@+id/text_resend_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <!--    <in.aabhasjindal.otptextview.OtpTextView-->
<!--        android:id="@+id/otpView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textColor="@color/black"-->
<!--        android:cursorVisible="true"-->
<!--        app:bar_active_color="@color/blue"-->
<!--        app:bar_enabled="true"-->
<!--        app:bar_error_color="@color/red"-->
<!--        app:bar_height="1.5dp"-->
<!--        app:bar_inactive_color="@color/blue"-->
<!--        android:layoutDirection="ltr"-->
<!--        app:bar_margin_bottom="0dp"-->
<!--        app:bar_margin_left="2dp"-->
<!--        app:bar_margin_right="2dp"-->
<!--        app:otp_box_background_inactive="@drawable/background_verification_otp_inactive_rounded_gray"-->
<!--        app:bar_success_color="@color/colorAccent"-->
<!--        app:box_margin="5dp"-->
<!--        app:height="60dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:otp_box_background="@drawable/background_verification_otp_rounded_white"-->
<!--        app:length="4"-->
<!--        app:otp=""-->
<!--        app:otp_text_size="20dp"-->
<!--        app:width="70dp"-->
<!--        tools:ignore="MissingClass" />-->


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />


</androidx.constraintlayout.widget.ConstraintLayout>