<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:orientation="vertical"
    android:background="@color/white_5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        >

        <Toolbar
            android:id="@+id/toolbar"
            android:elevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways" >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/ToolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/settings"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        >


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/avatar"
            app:civ_border_width="3dp"
            android:layout_marginTop="23dp"
            app:civ_border_color="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            style="@style/TextAppearanceBold.greyish_brown"
            android:text="@string/login_user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/tvUserTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="14sp"
            style="@style/TextAppearanceRegular.greyish_brown"
            android:text="@string/login_user_postion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

        <View
            android:id="@+id/tvTitleDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUserTitle"
            android:layout_marginTop="20dp"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/whiteTwo"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchBiometrics"
            android:textAppearance="@style/TextAppearanceRegular.greyish_brown"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitleDivider"
            android:text="@string/biometrics_label"
            />

        <TextView
            android:id="@+id/tvLanguageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearanceRegular.greyish_brown"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/greyish_brown"
            android:letterSpacing="-0.02"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/switchBiometrics"
            android:text="@string/language"/>
        <RadioGroup
            android:id="@+id/radioGroupLanguages"
            app:layout_constraintTop_toBottomOf="@id/tvLanguageLabel"
            app:layout_constraintStart_toStartOf="@id/tvLanguageLabel"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rButtonEn"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/english"
                />
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rButtonAr"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                />
        </RadioGroup>
        <TextView
            style="@style/TextAppearanceRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:letterSpacing="-0.02"
            android:lineSpacingExtra="4sp"
            android:text="@string/logout"
            android:textColor="@color/pastel_red"
            android:textSize="16sp"
            android:padding="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupLanguages" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>